--- a/css/style.css
+++ b/css/style.css
@@ -10046,6 +10046,79 @@ h3{
   border-radius: 0px;
   padding: 10px 25px;
 }
+.blog-section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color:gainsboro;
+}
+
+.blog {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #fff;
+  margin: 20px 0;
+  margin-bottom: 70px;
+  overflow: hidden;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.blog .content img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+}
+
+.blog-content {
+  padding: 20px;
+}
+
+.blog-title {
+  font-family: 'Playfair Display', serif;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  margin: 0 0 10px;
+  color: #b98157;
+}
+
+.blog-description {
+  border:1px solid white ;
+  font-size: 1rem;
+  color: #666;
+}
+
+.blog.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+.content {
+  position: relative;
+  display: inline-block;
+  margin: 20px;
+  cursor: pointer;
+}
+
+.hover-text {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 100%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  transition: opacity 0.3s ease-in-out;
+}
+.hover-text h3{
+  font-family: 'Playfair Display', serif;
+  color: #b98157;
+}
 
 /* Responsive Styles */
 @media (max-width: 768px) {
