--- a/css/style.css
+++ b/css/style.css
@@ -6366,7 +6366,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #37373F !important;
+  background-color: #19191b  !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
