--- a/css/style.css
+++ b/css/style.css
@@ -10199,8 +10199,60 @@ h2{
     font-style: italic;
   
 }
+/* Styling the Number Section */
+.number-container{
+  width: 100vw;
+  border-radius: 2px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  background: linear-gradient(rgb(187 166 124 / 95%), rgb(180 132 89 / 95%)), url(../img/bg.png);
+}
+
+
+.number-box h2 {
+  font-size: 48px;
+  font-weight: bold;
+  color: black;
+  margin-bottom: 10px;
+}
+
+.number-box p {
+  font-size: 18px;
+  font-family: "Merriweather", serif;
+  color: #333;
+}
+
+/* Hover effect for the number box */
+.number-box:hover {
+  transform: scale(1.05);
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .number-box {
+      margin-bottom: 20px;
+  }
+}
+.item-height{
+  height: 100vh; 
+}
 /* Responsive Styles */
 @media (max-width: 768px) {
+  .item-height{
+    height: 50vh; 
+  }
+  .navbar-nav{
+    align-items: center;
+    justify-content: center;
+    margin-top: -180px;
+    gap:10px;
+  }
+  .navbar{
+    z-index: 100;
+  }
+  .number-container{
+    width: 0px;
+  }
   .forex-widget .container, .comm-widget-1 .container {
       flex-direction: column;
       align-items: flex-start;
@@ -10209,5 +10261,7 @@ h2{
   .forex-widget .right, .comm-widget-1 .right {
       margin-top: 10px;
       justify-content: flex-start;
+      width: 80vw;
   }
 }
+
