--- a/css/style.css
+++ b/css/style.css
@@ -10048,6 +10048,7 @@ h3{
   padding: 10px 25px;
 }
 .blog-section {
+  margin-top:20px;
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
