--- a/css/style.css
+++ b/css/style.css
@@ -9715,7 +9715,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 /********** Custom CSS ************/
 h1, h2, h3 {
-  font-weight: 700 !important;
+  font-weight: 700;
 }
 
 h4, h5, h6 {
@@ -10300,7 +10300,10 @@ height: 110px;
   padding: 20px;
 }
 .company .description h3 {
+   font-style: normal;
+  font-weight: 800;
   margin: 0 0 10px;
+  text-transform: uppercase;
   font-size: 1.8rem;
   color:#88611e;
 }
