--- a/css/style.css
+++ b/css/style.css
@@ -10188,7 +10188,7 @@ h3{
 
 h3{
   font-family: "Merriweather", serif;
-  font-weight: 300;
+  font-weight: 700; important!
   font-style: italic;
 }
 
@@ -10301,7 +10301,7 @@ height: 110px;
 }
 .company .description h3 {
    font-style: normal;
-  font-weight: 800;
+  font-weight: 800; important!
   margin: 0 0 10px;
   text-transform: uppercase;
   font-size: 1.8rem;
